Outlined $F_\beta$ score functions
Outlined functionality to caclulate $F_\beta$ score, also added documentation to analysis view mode, but the pipeline is still having some issues

--- a/classification_metric_analysis.ipynb
+++ b/classification_metric_analysis.ipynb
@@ -511,20 +511,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`TODO:` Now with error bars: https://pandas.pydata.org/docs/user_guide/visualization.html#visualization-errorbars"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "`TODO:` Sensed mode distribution with error bars on sensed trip ranges"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Information V Confidence Experiement\n",
     "\n",
     "* Confidence:\n",
@@ -563,7 +549,7 @@
     "    for phone_os, phone_map in pv.map().items():\n",
     "        for phone_label, phone_detail_map in phone_map.items():\n",
     "            if \"control\" in phone_detail_map[\"role\"]:\n",
-    "                print(\"Ignoring %s phone %s since they are always on\" % (phone_detail_map[\"role\"], phone_label))\n",
+    "#                 print(\"Ignoring %s phone %s since they are always on\" % (phone_detail_map[\"role\"], phone_label))\n",
     "                continue\n",
     "            # this spec does not have any calibration ranges, but evaluation ranges are actually cooler\n",
     "            for r in phone_detail_map[\"evaluation_ranges\"]:\n",
@@ -597,16 +583,116 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Binary Classification\n",
+    "* one hit is one unit of duration \n",
+    "* TP: a true positive is when we sense that we are in a mode, and we are\n",
+    "* FP: a false positive is when we sense that we are in a mode, but we are not\n",
+    "* FN: a false negagative is we sense that we are not in a mode, but we are"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_binary_class(pv_l=[pv_la, pv_sj, pv_ucb]):\n",
+    "    BASE_MODE = {\"WALKING\": \"WALKING\",\n",
+    "        \"BICYCLING\": \"CYCLING\",\n",
+    "        \"ESCOOTER\": \"CYCLING\",\n",
+    "        \"BUS\": \"AUTOMOTIVE\",\n",
+    "        \"TRAIN\": \"AUTOMOTIVE\",\n",
+    "        \"LIGHT_RAIL\": \"AUTOMOTIVE\",\n",
+    "        \"SUBWAY\": \"AUTOMOTIVE\",\n",
+    "        \"CAR\": \"AUTOMOTIVE\"}\n",
+    "    trips = []\n",
+    "    for pv in pv_l:\n",
+    "        trips.extend(get_trip_ss_and_gts_timeline(pv))\n",
+    "    TP = {}\n",
+    "    FP = {}\n",
+    "    FN = {}\n",
+    "    ## loop though all of the trips\n",
+    "    for trip in trips:\n",
+    "        ## when we sense a mode. Used for TP and FP\n",
+    "        for ss in trip['sensed_section_ranges']:\n",
+    "            # sensed duration := TP + FP\n",
+    "            ss_dur  = ss['end_ts'] - ss['start_ts']\n",
+    "            time_in_gt_modes = {}\n",
+    "            gts_dur = 0\n",
+    "            for gts in trip['gts_timeline']:\n",
+    "                # if the gts starts before the ss ends and ends after the ss starts\n",
+    "                if gts['start_ts'] <= ss['end_ts'] and gts['end_ts'] >= ss['start_ts']:\n",
+    "                    dur     = min(ss['end_ts'], gts['end_ts']) - max(ss['start_ts'], gts['start_ts'])\n",
+    "                    gts_dur += dur\n",
+    "                    if BASE_MODE[gts['mode']] == ss['mode']:\n",
+    "                        # we sense that we are in a mode, and we are\n",
+    "                        TP[ss['mode']] = time_in_gt_modes.setdefault(ss['mode'], 0) + dur\n",
+    "                    else:\n",
+    "                        # we sense that we are in a mode, and we are not\n",
+    "                        FP[ss['mode']] = time_in_gt_modes.setdefault(ss['mode'], 0) + dur\n",
+    "            ## Take care of when we have no gts, which is a FP as we sense we are in a mode, but in fact their is no gt, so we are not\n",
+    "            leftover = ss_dur - gts_dur\n",
+    "            assert leftover >= 0\n",
+    "            FP[ss['mode']] = time_in_gt_modes.setdefault(ss['mode'], 0) + leftover\n",
+    "        ## Now we check the ground truth timeline, for FN\n",
+    "        for gts in trip['gts_timeline']:\n",
+    "            gts_dur = gts['end_ts'] - gts['start_ts']\n",
+    "            ss_dur = 0\n",
+    "            for ss in trip['sensed_section_ranges']:\n",
+    "                # if the ss starts before gts ends and ss ends after the gts starts\n",
+    "                if ss['start_ts'] <= gts['end_ts'] and ss['end_ts'] >= gts['start_ts']:\n",
+    "                    dur     = min(ss['end_ts'], gts['end_ts']) - max(ss['start_ts'], gts['start_ts'])\n",
+    "                    ss_dur += dur\n",
+    "                    if BASE_MODE[gts['mode']] != ss['mode']:\n",
+    "                        # we sense that we are not in a mode, but we are\n",
+    "                        FN[BASE_MODE[gts['mode']]] = time_in_gt_modes.setdefault(gts['mode'], 0) + dur\n",
+    "            leftover = gts_dur - ss_dur\n",
+    "            assert leftover >= 0\n",
+    "            # we sense that we are not in a mode, but we are\n",
+    "            FN[BASE_MODE[gts['mode']]] = time_in_gt_modes.setdefault(gts['mode'], 0) + leftover\n",
+    "    return TP, FP, FN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# $F_\\beta$ score, Percision and Recall\n",
+    "\n",
+    "* Recall for Multi-Class Classification\n",
+    "    + Recall = Sum c in C TruePositives_c / Sum c in C (TruePositives_c + FalseNegatives_c)\n",
+    "* Precision for Multi-Class Classification\n",
+    "    + Precision = Sum c in C TruePositives_c / Sum c in C (TruePositives_c + FalsePositives_c)\n",
+    "* $F_\\beta = (1 + \\beta^2) \\cdot \\frac{\\mathrm{precision} \\cdot \\mathrm{recall}}{(\\beta^2 \\cdot \\mathrm{precision}) + \\mathrm{recall}}$\n",
+    "* $F_\\beta = \\frac {(1 + \\beta^2) \\cdot \\mathrm{true\\ positive} }{(1 + \\beta^2) \\cdot \\mathrm{true\\ positive} + \\beta^2 \\cdot \\mathrm{false\\ negative} + \\mathrm{false\\ positive}}$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "trips = []\n",
-    "for pv in [pv_la, pv_sj, pv_ucb]:\n",
-    "    trips.extend(get_trip_ss_and_gts_timeline(pv))\n",
-    "# print(trips[0].keys())\n",
-    "# print(trips[0]['sensed_section_ranges'][6]['mode'])"
+    "def get_F_score(pv_l=[pv_la, pv_sj, pv_ucb], beta=1):\n",
+    "    F_score = {}\n",
+    "    (TP, FP, FN) = get_binary_class(pv_l)\n",
+    "    for mode in TP.keys():\n",
+    "        numerator   = (1 + beta**2) * TP[mode]\n",
+    "        denominator = (1+beta**2) * TP[mode] + beta**2*FN[mode] + FP[mode]\n",
+    "        F_score[mode] = (numerator)/(denominator)\n",
+    "    return F_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_F_score()"
    ]
   },
   {
@@ -630,6 +716,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Confusion Matrix\n",
+    "For every sensed section, lets find ground truth associated with that time frame, and we find the ratio of ground truth modes for that given time frame, and compare with the sensed mode."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -637,22 +731,27 @@
    },
    "outputs": [],
    "source": [
-    "ss_mode_v_gt_mode_l = []\n",
-    "for trip in trips:\n",
-    "    probabilities = {}\n",
-    "    for ss in trip['sensed_section_ranges']:\n",
-    "        ss_dur  = ss['end_ts'] - ss['start_ts']\n",
-    "        time_in_gt_modes = {}\n",
-    "        for i, gts in enumerate(trip['gts_timeline']): # TODO: optimize here\n",
-    "            if gts['end_ts'] >= ss['start_ts'] and gts['start_ts'] <= ss['end_ts']:\n",
-    "                dur     = min(ss['end_ts'], gts['end_ts']) - max(ss['start_ts'], gts['start_ts'])\n",
-    "                time_in_gt_modes[gts['mode']] = time_in_gt_modes.setdefault(gt_mode, 0) + dur\n",
-    "        time_in_gt_modes['NO GT'] = max(ss_dur - sum(time_in_gt_modes.values(), 0.0),0)\n",
-    "        for mode in time_in_gt_modes.keys():\n",
-    "            time_in_gt_modes[mode] /= ss_dur\n",
-    "        \n",
-    "        time_in_gt_modes['sensed_mode'] = ss['mode']\n",
-    "        ss_mode_v_gt_mode_l.append(time_in_gt_modes)"
+    "def get_ss_mode_v_gt_mode(pv_l=[pv_la, pv_sj, pv_ucb]):\n",
+    "    trips = []\n",
+    "    for pv in pv_l:\n",
+    "        trips.extend(get_trip_ss_and_gts_timeline(pv))\n",
+    "    ss_mode_v_gt_mode_l = []\n",
+    "    for trip in trips:\n",
+    "        probabilities = {}\n",
+    "        for ss in trip['sensed_section_ranges']:\n",
+    "            ss_dur  = ss['end_ts'] - ss['start_ts']\n",
+    "            time_in_gt_modes = {}\n",
+    "            for i, gts in enumerate(trip['gts_timeline']): # TODO: optimize here\n",
+    "                if gts['end_ts'] >= ss['start_ts'] and gts['start_ts'] <= ss['end_ts']:\n",
+    "                    dur     = min(ss['end_ts'], gts['end_ts']) - max(ss['start_ts'], gts['start_ts'])\n",
+    "                    time_in_gt_modes[gts['mode']] = time_in_gt_modes.setdefault(gts['mode'], 0) + dur\n",
+    "            time_in_gt_modes['NO GT'] = max(ss_dur - sum(time_in_gt_modes.values(), 0.0),0) #TODO: make sure this is right\n",
+    "            for mode in time_in_gt_modes.keys():\n",
+    "                time_in_gt_modes[mode] /= ss_dur\n",
+    "            # TODO: assert sum of all rows == 1 +- epsilon\n",
+    "            time_in_gt_modes['sensed_mode'] = ss['mode']\n",
+    "            ss_mode_v_gt_mode_l.append(time_in_gt_modes)\n",
+    "    return ss_mode_v_gt_mode_l"
    ]
   },
   {
@@ -661,9 +760,97 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ss_mode_v_gt_mode_df = pd.DataFrame(ss_mode_v_gt_mode_l).groupby('sensed_mode').sum()\n",
+    "ss_mode_v_gt_mode_df = pd.DataFrame(get_ss_mode_v_gt_mode([pv_la, pv_sj, pv_ucb])).groupby('sensed_mode').sum()\n",
     "ss_mode_v_gt_mode_df.div(ss_mode_v_gt_mode_df.sum(axis=1), axis=0).mul(100)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Now for the Analyzed Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To analyze the data, we run it throught the e-mission pipeline, maming sure to run `source setup/activate.sh`\n",
+    "Then, we run the following python script in the e-mission directory\n",
+    "```python\n",
+    "import logging\n",
+    "from logging import config\n",
+    "import emission.core.get_database as edb\n",
+    "import emission.pipeline.intake_stage as epi\n",
+    "users = list(edb.get_uuid_db().find())\n",
+    "uuid_list = []\n",
+    "for user in users:\n",
+    "    uuid_list.append(user['uuid'])\n",
+    "# I think the following process number should work. Not to be cynical, but it is only used for logging, so I don't care too much\n",
+    "epi.run_intake_pipeline(str(len(uuid_list)), uuid_list)\n",
+    "\n",
+    "```\n",
+    "\n",
+    "\n",
+    "Then we load in the anlyized data with `emeval.analysed.phone_view.create_analysed_view()`\n",
+    "\n",
+    "p.s. also, we can totaly save it as a .pkl file localy for speed :)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import emeval.analysed.phone_view as eapv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "av_la = eapv.create_analysed_view(pv_la, \"http://localhost:8080\", \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "av_sj = eapv.create_analysed_view(pv_sj, \"http://localhost:8080\", \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "av_ucb = eapv.create_analysed_view(pv_ucb, \"http://localhost:8080\", \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ss_mode_v_gt_mode_df = pd.DataFrame(get_ss_mode_v_gt_mode([av_la, av_sj, av_ucb])).groupby('sensed_mode').sum()\n",
+    "ss_mode_v_gt_mode_df.div(ss_mode_v_gt_mode_df.sum(axis=1), axis=0).mul(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
