Documenting get timeline, get binary classification, and get $F_\beta$ scores
Documenting the above functions for easier review by @shankari

--- a/classification_metric_analysis.ipynb
+++ b/classification_metric_analysis.ipynb
@@ -511,31 +511,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Information V Confidence Experiement\n",
+    "## Get sensed timeline\n",
     "\n",
-    "* Confidence:\n",
-    "    + When our senced mode is Y, XX% of the time (in the training data) our mode is Z subset of [A,B,C]\n",
-    "* Probable Outcome List (POL):\n",
-    "    + With XX% confidence, When our sensed mode is A, our outcome is a combination of of A B C\n",
-    "        - POL(100) := [A,B,C], POL(0) := [ ]\n",
-    "        - Our goal is to compress the list\n",
-    "* Probable Range (PR) with XX% confidence:\n",
-    "    + PR(XX) := POL(XX).max - POL(XX).min\n",
-    "* Information (I): \n",
-    "    + I := PR(100) - PR(XX)\n",
-    "* GOAL: \n",
-    "    + With XX% confidence, our range is PR(XX) and our information is I\n",
-    "    + Plot Information v. Confidence for each sensed mode\n",
-    "* Executables\n",
-    "    + Get timeline of when we are in sensed Z mode for tr, calculate duration for sensed Z mode\n",
-    "    + Get ground truth mode for timeline, calculate [A,B,C]/(Z durration)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Get sensed timeline"
+    "```python\n",
+    "def get_trip_ss_and_gts_timeline():\n",
+    "    \"\"\"\n",
+    "    Get the sensed and ground truth timeline for each evaluation trip range for a given phone view.\n",
+    "    \n",
+    "    ----------\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    arg1: phone view\n",
+    "        A phone view to recieve timelines for.\n",
+    "\n",
+    "    -------\n",
+    "    Returns\n",
+    "    -------\n",
+    "    list\n",
+    "        A list of trips for each phone view. Each trip has two entries, the sensed mode timeline and the ground truth timeline for the corresponding evaluation trip range.\n",
+    "    \"\"\"\n",
+    "    ...\n",
+    "```"
    ]
   },
   {
@@ -587,15 +583,44 @@
    "metadata": {},
    "source": [
     "## Binary Classification\n",
-    "* one hit is one unit of duration \n",
-    "* TP: a true positive is when we sense that we are in a mode, and we are\n",
-    "* FP: a false positive is when we sense that we are in a mode, but we are not\n",
-    "* FN: a false negagative is we sense that we are not in a mode, but we are"
+    "```python\n",
+    "def get_binary_class(pv_l=[pv_la, pv_sj, pv_ucb]):\n",
+    "    \"\"\"\n",
+    "    This function computes binary classifications for a given set of trips.\n",
+    "    Using one unit of duration as our base unit, we calculate the following classifications:\n",
+    "        * True Positive\n",
+    "            + A true positive is when we sense that we are in a mode and we are in that mode.\n",
+    "        * False Positive\n",
+    "            + A false positive is when we sense that we are in a mode that we are not it.\n",
+    "        * False Negative\n",
+    "            + A false negative is when we are in a mode, but we do not sense being in that mode.\n",
+    "     \n",
+    "     Note that we compute the binary classifications for each sensed mode, but we combine the 'WALKING' and 'RUNNING' modes.\n",
+    "     Additionally, note that we have use the ground truth base mode when determining hits and misses. \n",
+    "    \n",
+    "    ----------\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    arg1: phone view list\n",
+    "        A list of phone views to retrieve sensed and ground truth timelines for. Defaults to phone views from the LA, SJ, and UCB trips.\n",
+    "    \n",
+    "    -------\n",
+    "    Returns\n",
+    "    -------\n",
+    "    list\n",
+    "        A list with the following entries\n",
+    "            [0] A dictionary of true positives with sensed modes as keys and TP hits has values.\n",
+    "            [1] A dictionary of false positives with sensed modes as keys and FP hits has values.\n",
+    "            [2] A dictionary of false negatives with sensed modes as keys and FN hits has values.\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    ...\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +636,7 @@
     "    trips = []\n",
     "    for pv in pv_l:\n",
     "        trips.extend(get_trip_ss_and_gts_timeline(pv))\n",
-    "    TP = {}\n",
+    "    TP = {'INVALID' : 0}\n",
     "    FP = {}\n",
     "    FN = {}\n",
     "    ## loop though all of the trips\n",
@@ -636,7 +661,7 @@
     "            ## Take care of when we have no gts, which is a FP as we sense we are in a mode, but in fact their is no gt, so we are not\n",
     "            leftover = ss_dur - gts_dur\n",
     "            assert leftover >= 0\n",
-    "            FP[ss['mode']] = time_in_gt_modes.setdefault(ss['mode'], 0) + leftover\n",
+    "            FP[ss['mode']] = time_in_gt_modes.setdefault(ss['mode'], 0) + leftover # FIXME: this gives mode error\n",
     "        ## Now we check the ground truth timeline, for FN\n",
     "        for gts in trip['gts_timeline']:\n",
     "            gts_dur = gts['end_ts'] - gts['start_ts']\n",
@@ -648,26 +673,53 @@
     "                    ss_dur += dur\n",
     "                    if BASE_MODE[gts['mode']] != ss['mode']:\n",
     "                        # we sense that we are not in a mode, but we are\n",
-    "                        FN[BASE_MODE[gts['mode']]] = time_in_gt_modes.setdefault(gts['mode'], 0) + dur\n",
+    "                        FN[ss['mode']] = time_in_gt_modes.setdefault(ss['mode'], 0) + dur\n",
     "            leftover = gts_dur - ss_dur\n",
     "            assert leftover >= 0\n",
     "            # we sense that we are not in a mode, but we are\n",
-    "            FN[BASE_MODE[gts['mode']]] = time_in_gt_modes.setdefault(gts['mode'], 0) + leftover\n",
-    "    return TP, FP, FN"
+    "            FN[ss['mode']] = time_in_gt_modes.setdefault(ss['mode'], 0) + leftover\n",
+    "    ## add together running and walking for TP and FN and remove the running key\n",
+    "    for BC in FP,FN:\n",
+    "        BC['WALKING'] += BC['RUNNING']\n",
+    "        BC.pop('RUNNING')\n",
+    "    return [TP, FP, FN]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# $F_\\beta$ score, Percision and Recall\n",
+    "# $F_\\beta$ score\n",
+    "$$\n",
+    "F_\\beta = \\frac {(1 + \\beta^2) \\cdot \\mathrm{true\\ positive} }{(1 + \\beta^2) \\cdot \\mathrm{true\\ positive} + \\beta^2 \\cdot \\mathrm{false\\ negative} + \\mathrm{false\\ positive}}\n",
+    "$$\n",
     "\n",
-    "* Recall for Multi-Class Classification\n",
-    "    + Recall = Sum c in C TruePositives_c / Sum c in C (TruePositives_c + FalseNegatives_c)\n",
-    "* Precision for Multi-Class Classification\n",
-    "    + Precision = Sum c in C TruePositives_c / Sum c in C (TruePositives_c + FalsePositives_c)\n",
-    "* $F_\\beta = (1 + \\beta^2) \\cdot \\frac{\\mathrm{precision} \\cdot \\mathrm{recall}}{(\\beta^2 \\cdot \\mathrm{precision}) + \\mathrm{recall}}$\n",
-    "* $F_\\beta = \\frac {(1 + \\beta^2) \\cdot \\mathrm{true\\ positive} }{(1 + \\beta^2) \\cdot \\mathrm{true\\ positive} + \\beta^2 \\cdot \\mathrm{false\\ negative} + \\mathrm{false\\ positive}}$"
+    "```python\n",
+    "def get_F_score(pv_l=[pv_la, pv_sj, pv_ucb], beta=1):\n",
+    "    \"\"\"\n",
+    "    This function calculates the F score\n",
+    "    $$\n",
+    "    F_\\beta = \\frac {(1 + \\beta^2) \\cdot \\mathrm{true\\ positive} }{(1 + \\beta^2) \\cdot \\mathrm{true\\ positive} + \\beta^2 \\cdot \\mathrm{false\\ negative} + \\mathrm{false\\ positive}}\n",
+    "    $$\n",
+    "    based off data from a given set of phone views. Calls the get binary classification function\n",
+    "    \n",
+    "    ----------\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    arg1: phone view list\n",
+    "        list of phone views to collect data from. Defaults to the LA, SJ, and UCB trip phone views\n",
+    "    arg2: int\n",
+    "        The beta value in which to use in the $F_\\beta$ score. Defaults to 1.\n",
+    "        \n",
+    "    -------\n",
+    "    Returns\n",
+    "    -------\n",
+    "    dict:\n",
+    "        A dictionary with sensed modes as the keys and the corresponding of $F_\\beta$ scores as the values.\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    ...\n",
+    "```"
    ]
   },
   {
@@ -679,7 +731,7 @@
     "def get_F_score(pv_l=[pv_la, pv_sj, pv_ucb], beta=1):\n",
     "    F_score = {}\n",
     "    (TP, FP, FN) = get_binary_class(pv_l)\n",
-    "    for mode in TP.keys():\n",
+    "    for mode in FP.keys():\n",
     "        numerator   = (1 + beta**2) * TP[mode]\n",
     "        denominator = (1+beta**2) * TP[mode] + beta**2*FN[mode] + FP[mode]\n",
     "        F_score[mode] = (numerator)/(denominator)\n",
@@ -775,8 +827,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To analyze the data, we run it throught the e-mission pipeline, maming sure to run `source setup/activate.sh`\n",
-    "Then, we run the following python script in the e-mission directory\n",
+    "To analyze the data, we run it throught the e-mission pipeline, maming sure to run `source setup/activate.sh` to activate our conda environemnt, and then we run `./e-mission-py.bash bin/reset_pipeline.py -a` to reset the pipeline. Finally, we run the following python script in the e-mission directory\n",
     "```python\n",
     "import logging\n",
     "from logging import config\n",
