Finished formatting for confusion matrix plot

--- a/classification_analysis.ipynb
+++ b/classification_analysis.ipynb
@@ -331,6 +331,7 @@
     "    assert os in ['android', 'ios'], 'UNKNOWN OS'\n",
     "    assert role in ['accuracy_control', 'HAHFDC', 'HAMFDC', 'MAHFDC', 'power_control'], \"UNKNOWN ROLE\"\n",
     "    BASE_MODE = {\"WALKING\": \"WALKING\",\n",
+    "        \"RUNNING\" : \"WALKING\",\n",
     "        \"BICYCLING\": \"CYCLING\",\n",
     "        \"ESCOOTER\": \"CYCLING\",\n",
     "        \"BUS\": \"AUTOMOTIVE\",\n",
@@ -381,6 +382,7 @@
     "            assert leftover >= 0\n",
     "            # we sense that we are not in a mode, but we are\n",
     "            FN[ss['mode']] = time_in_gt_modes.setdefault(ss['mode'], 0) + leftover\n",
+    "    \n",
     "    return [TP, FP, FN]"
    ]
   },
@@ -424,17 +426,6 @@
     "    \"\"\"\n",
     "    ...\n",
     "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4d11ecc6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(TP, FP, FN) = get_binary_class(pv_la, 'android', 'HAMFDC')\n",
-    "print(TP, '\\n', FP, '\\n', FN)"
    ]
   },
   {
@@ -521,11 +512,21 @@
    "outputs": [],
    "source": [
     "import itertools\n",
-    "def plot_confusion_matrix(pv, os, role):\n",
-    "    df = pd.DataFrame(get_confusion_matrix(pv_la, os, role)).groupby('sensed_mode').sum()\n",
+    "def plot_confusion_matrix(os, role, pv=None, pv_l=None):\n",
+    "    assert pv != pv_l, \"MUST PROVIDE EITHER PHONE VIEW OR PHONE VIEW LIST\"\n",
+    "    assert pv is not None or pv_l is not None, \"MUST PROVIDE EITHER PHONE VIEW OR PHONE VIEW LIST\"\n",
+    "    if pv:\n",
+    "        df = pd.DataFrame(get_confusion_matrix(pv, os, role)).groupby('sensed_mode').sum()\n",
+    "        title =  f\"Confusion Matrix for {pv.spec_details.CURR_SPEC_ID}\\n os={os}\\n role={role}\"\n",
+    "    if pv_l:\n",
+    "        cm_l = []\n",
+    "        for pv in pv_l:\n",
+    "            cm_l.extend(get_confusion_matrix(pv, os, role))\n",
+    "        df = pd.DataFrame(cm_l).groupby('sensed_mode').sum()\n",
+    "        title =  f\"Confusion Matrix\\n os={os}\\n role={role}\"\n",
     "    fig, ax = plt.subplots(1,1, figsize=(10,10))\n",
     "    cm = ax.imshow(df, interpolation='nearest',  cmap=plt.cm.Blues)\n",
-    "    ax.set_title(f\"Confusion Matrix\\n SPEC ID={pv_la.spec_details.CURR_SPEC_ID}\\n os={os}\\n role={role}\")\n",
+    "    ax.set_title(title)\n",
     "    plt.colorbar(cm, ax=ax)\n",
     "    tick_marks = np.arange(len(df))\n",
     "    ax.set_xticks(np.arange(len(df.columns)))\n",
@@ -533,7 +534,11 @@
     "    ax.set_xticklabels(df)\n",
     "    ax.set_yticklabels(df.index)\n",
     "    ax.set_xlabel('True label')\n",
-    "    ax.set_ylabel('Predicted label')"
+    "    ax.set_ylabel('Predicted label')\n",
+    "    color_thresh = df.max().max() / 2\n",
+    "    for i, j in itertools.product(range(df.shape[0]), range(df.shape[1])  ):\n",
+    "        ax.text(j, i, round(df.iat[i,j], 2), horizontalalignment='center', \n",
+    "               color='white' if df.iat[i,j] > color_thresh else 'black')"
    ]
   },
   {
@@ -551,7 +556,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_confusion_matrix(pv_la, 'ios', 'HAHFDC')"
+    "plot_confusion_matrix('ios', 'HAHFDC', pv_l=[pv_la, pv_sj, pv_ucb])"
    ]
   },
   {
