Transposed confusion matrix, changed analyzed view to 'cleaned'

--- a/classification_analysis.ipynb
+++ b/classification_analysis.ipynb
@@ -525,20 +525,20 @@
     "        df = pd.DataFrame(cm_l).groupby('sensed_mode').sum()\n",
     "        title =  f\"Confusion Matrix\\n os={os}\\n role={role}\"\n",
     "    fig, ax = plt.subplots(1,1, figsize=(10,10))\n",
-    "    cm = ax.imshow(df, interpolation='nearest',  cmap=plt.cm.Blues)\n",
+    "    cm = ax.imshow(df.transpose(), interpolation='nearest',  cmap=plt.cm.Blues)\n",
     "    ax.set_title(title)\n",
     "    plt.colorbar(cm, ax=ax)\n",
     "    tick_marks = np.arange(len(df))\n",
-    "    ax.set_xticks(np.arange(len(df.columns)))\n",
-    "    ax.set_yticks(np.arange(len(df)))\n",
-    "    ax.set_xticklabels(df)\n",
-    "    ax.set_yticklabels(df.index)\n",
-    "    ax.set_xlabel('True label')\n",
-    "    ax.set_ylabel('Predicted label')\n",
+    "    ax.set_yticks(np.arange(len(df.columns)))\n",
+    "    ax.set_xticks(np.arange(len(df)))\n",
+    "    ax.set_yticklabels(df)\n",
+    "    ax.set_xticklabels(df.index)\n",
+    "    ax.set_ylabel('True label')\n",
+    "    ax.set_xlabel('Predicted label')\n",
     "    color_thresh = df.max().max() / 2\n",
-    "    for i, j in itertools.product(range(df.shape[0]), range(df.shape[1])  ):\n",
-    "        ax.text(j, i, round(df.iat[i,j], 2), horizontalalignment='center', \n",
-    "               color='white' if df.iat[i,j] > color_thresh else 'black')"
+    "    for i, j in itertools.product(range(df.shape[1]), range(df.shape[0])  ):\n",
+    "        ax.text(j, i, round(df.transpose().iat[i,j], 2), horizontalalignment='center', \n",
+    "               color='white' if df.transpose().iat[i,j] > color_thresh else 'black')"
    ]
   },
   {
@@ -556,16 +556,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_confusion_matrix('ios', 'HAHFDC', pv_l=[pv_la, pv_sj, pv_ucb])"
+    "plot_confusion_matrix('ios', 'HAMFDC', pv_l=[pv_la, pv_sj, pv_ucb])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09b4ab8e",
+   "metadata": {},
+   "source": [
+    "## Analyzed Data"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34f10cc6",
+   "id": "c0a4a5a5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import emeval.analysed.phone_view as eapv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "afa60aea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "importlib.reload(eapv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87a082a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%capture\n",
+    "av_la_clean   = eapv.create_analysed_view(pv_la, \"http://localhost:8080\", \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/cleaned_section\")\n",
+    "av_sj_clean   = eapv.create_analysed_view(pv_sj, \"http://localhost:8080\", \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/cleaned_section\")\n",
+    "av_ucb_clean  = eapv.create_analysed_view(pv_ucb, \"http://localhost:8080\", \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/cleaned_section\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fcfc5f5d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_confusion_matrix('ios', 'HAMFDC', pv=av_la_clean)"
+   ]
   }
  ],
  "metadata": {
