Wrote a function to get FP and FN rates

--- a/classification_analysis.ipynb
+++ b/classification_analysis.ipynb
@@ -327,6 +327,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b683621c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# taken from emission.core.wrapper.modeprediction\n",
+    "import enum as enum\n",
+    "class PredictedModeTypes(enum.Enum):\n",
+    "    UNKNOWN = 0\n",
+    "    WALKING = 1\n",
+    "    BICYCLING = 2\n",
+    "    BUS = 3\n",
+    "    TRAIN = 4\n",
+    "    CAR = 5\n",
+    "    AIR_OR_HSR = 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1a9b89d4",
    "metadata": {},
    "outputs": [],
@@ -358,6 +377,12 @@
     "#         for mode in pd.DataFrame(trip['ss_timeline'])['mode'].unique():\n",
     "        for mode in [\"WALKING\", \"AUTOMOTIVE\", \"CYCLING\", \"INVALID\"]:\n",
     "            for ss in trip['ss_timeline']:\n",
+    "                try:\n",
+    "                    # taken from emission.core.wrapper.modeprediction\n",
+    "                    ss = ss['data']\n",
+    "                    ss['mode'] = PredictedModeTypes(ss['sensed_mode'])._name_\n",
+    "                except:\n",
+    "                    1/0\n",
     "                ss_dur = ss['end_ts'] - ss['start_ts']\n",
     "                gts_dur = 0\n",
     "                for gts in trip['gts_timeline']:\n",
@@ -385,10 +410,57 @@
     "                    else:\n",
     "                        TN[mode] = TN.setdefault(mode, 0) + leftover\n",
     "    # combine walking and running\n",
-    "#     for BC in [TP, FP, FN, TN]:\n",
-    "#         BC['WALKING'] = BC.setdefault('WALKING', 0) + BC.setdefault('RUNNING', 0)\n",
-    "#         BC.pop('RUNNING')\n",
+    "    for BC in [TP, FP, FN, TN]:\n",
+    "        BC['WALKING'] = BC.setdefault('WALKING', 0) + BC.setdefault('RUNNING', 0)\n",
+    "        BC = BC.pop('RUNNING')\n",
     "    return TP, FP, FN, TN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d415cb90",
+   "metadata": {},
+   "source": [
+    "# Get the error bars for trips"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b0599fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_FN_and_FP_rate(spec_detail):\n",
+    "#     phone_view = eipv.PhoneView(spec_detail)\n",
+    "    # this is a temporary fix untill we get around this issue\n",
+    "    phone_view = pv_la\n",
+    "    analysed_view = eapv.create_analysed_view(phone_view, spec_detail.DATASTORE_LOC, \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\")\n",
+    "    (TP, FP, FN, TN) = get_binary_class_in_sec('ios', 'HAHFDC', pv=analysed_view)\n",
+    "    \n",
+    "    FN_rate = {'ios_HAHFDC' : {}, 'android_HAHFDC' : {}}\n",
+    "    FP_rate = {'ios_HAHFDC' : {}, 'android_HAHFDC' : {}}\n",
+    "    assert len(FN.keys()) == len(FP.keys()), \"WE SHOULD HAVE THE SAME FN AND FP KEYS\"\n",
+    "    for mode in FN.keys():\n",
+    "        FN_rate['ios_HAHFDC'][mode] = FN[mode] / (TP[mode] + FP[mode] + FN[mode] + TN[mode])\n",
+    "        FP_rate['ios_HAHFDC'][mode] = FN[mode] / (TP[mode] + FP[mode] + FN[mode] + TN[mode])\n",
+    "    (TP, FP, FN, TN) = get_binary_class_in_sec('android', 'HAHFDC', pv=analysed_view)\n",
+    "    assert len(FN.keys()) == len(FP.keys()), \"WE SHOULD HAVE THE SAME FN AND FP KEYS\"\n",
+    "    for mode in FN.keys():\n",
+    "        FN_rate['android_HAHFDC'][mode] = FN[mode] / (TP[mode] + FP[mode] + FN[mode] + TN[mode])\n",
+    "        FP_rate['android_HAHFDC'][mode] = FN[mode] / (TP[mode] + FP[mode] + FN[mode] + TN[mode])\n",
+    "    return FN_rate, FP_rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3eaef6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sd = eisd.ServerSpecDetails('http://localhost:8080', \"shankari@eecs.berkeley.edu\", \"unimodal_trip_car_bike_mtv_la\")\n",
+    "get_FN_and_FP_rate(sd)"
    ]
   },
   {
@@ -813,7 +885,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "fcfc5f5d",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "plot_confusion_matrix('ios', pv=av_la_clean)"
@@ -822,10 +896,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bdc496b4",
+   "id": "0b90ef35",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "get_binary_class_in_sec('ios', 'HAHFDC', pv=av_la_clean)"
+   ]
   }
  ],
  "metadata": {
