updating the error bars methods

--- a/classification_analysis.ipynb
+++ b/classification_analysis.ipynb
@@ -45,6 +45,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "08f1c6a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for analysized view\n",
+    "import emeval.analysed.phone_view as eapv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d3c817fd",
    "metadata": {},
    "outputs": [],
@@ -432,9 +443,7 @@
    "outputs": [],
    "source": [
     "def get_FN_and_FP_rate(spec_detail):\n",
-    "#     phone_view = eipv.PhoneView(spec_detail)\n",
-    "    # this is a temporary fix untill we get around this issue\n",
-    "    phone_view = pv_la\n",
+    "    phone_view = eipv.PhoneView(spec_detail)\n",
     "    analysed_view = eapv.create_analysed_view(phone_view, spec_detail.DATASTORE_LOC, \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\")\n",
     "    (TP, FP, FN, TN) = get_binary_class_in_sec('ios', 'HAHFDC', pv=analysed_view)\n",
     "    \n",
